# nextest-platform

./: README.md
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 35bf783fcb8a_init.py  65026c057079_add_user_table.py  69b600181f99_initial.py  b2c3d4e5f6a7_skills_use_count_drop_extra_cols.py  b7c3f91a2d84_rename_users_role_to_user_type.py  c3d4e5f6a7b8_agent_sessions_messages.py  c4e8f1a2b3d5_add_projects_and_project_members.py  d4e5f6a7b8c9_agent_sessions_title.py  db553fbd344f_init.py  e5f6a7b8c9d0_agent_sessions_title_default_empty.py  e7b2c4d5f6a8_add_project_modules_and_test_cases.py  f8a1c2e3b4d6_drop_functional_cases_sort_order.py  fe0ef7a60bcd_update.py
backend/app/: main.py
backend/app/agent/: __init__.py  context.py  executor.py  input_normalizer.py  memory_service.py  orchestrator.py  planner.py  policies.py  stream.py  types.py
backend/app/api/: router.py
backend/app/constants/: enums.py  error_codes.py
backend/app/contracts/: __init__.py  skill.py
backend/app/core/: config.py  exception_handlers.py  exceptions.py  logger.py  middleware.py  password.py  responses.py  token.py
backend/app/db/: __init__.py  session.py
backend/app/llm/: __init__.py  client.py  exceptions.py  parser.py  retry.py  service.py
backend/app/models/: __init__.py  agent_session.py  base.py  conversation.py  functional_case.py  project.py  project_module.py  skill.py  user.py  user_llm_profile.py
backend/app/repositories/: __init__.py  base.py  (+8 more)
backend/docs/: database-migrations.md
(+153 files in other folders)
