[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncmy>=0.2.11",
    "fastapi>=0.135.3",
    "loguru>=0.7.3",
    "orjson>=3.11.8",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "pymysql>=1.1.2",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]
